--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "miruken-callback": "^0.0.1",
-      "miruken-core": "^0.0.1"
+      "miruken-callback": "0.0",
+      "miruken-core": "0.0"
     },
     "devDependencies": {
       "chai": "^3.5.0"
     }
   },
   "dependencies": {
-    "miruken-callback": "0.0.1",
-    "miruken-core": "0.0.1"
+    "miruken-callback": "0.0",
+    "miruken-core": "0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
@@ -43,6 +43,7 @@
     "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-runtime": "^6.11.6",
+    "camelcase": "^4.0.0",
     "chai": "^1.10.0",
     "conventional-changelog": "^1.1.0",
     "del": "^2.2.0",
