--- a/package.json
+++ b/package.json
@@ -29,19 +29,11 @@
       "chai": "^3.5.0"
     }
   },
-  "dependencies": {
-    "miruken-callback": "0.0",
-    "miruken-core": "0.0"
-  },
   "devDependencies": {
-    "babel-cli": "^6.16.0",
     "babel-core": "^6.16.0",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.7.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-runtime": "^6.11.6",
     "camelcase": "^4.0.0",
     "chai": "^4.1.2",
@@ -71,6 +63,7 @@
     "rollup": "^0.55.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-multi-entry": "^2.0.1",
+    "rollup-plugin-node-resolve": "^3.0.2",
     "run-sequence": "^2.2.1",
     "through2": "^2.0.1",
     "vinyl-paths": "^2.1.0",
