--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "miruken-callback": "0.0.5-alpha.53",
-      "miruken-core": "0.0.5-alpha.39"
+      "miruken-callback": "0.0.5-alpha.54",
+      "miruken-core": "0.0.5-alpha.40"
     },
     "devDependencies": {
       "chai": "^4.2.0"
@@ -34,6 +34,7 @@
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@babel/plugin-transform-block-scoping": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@rollup/plugin-babel": "^5.0.2",
